--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,29 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  fluent_ui: ^4.7.5
+  intl: ^0.18.1
+  mobx: ^2.2.0
+  flutter_mobx: ^2.0.6+5
+  get_it: 7.6.3
+  http: ^1.1.0
+  crypto: ^3.0.3
+  loading_animation_widget: ^1.2.0+4
+  adaptive_scrollbar: ^2.1.2
+  universal_html: ^2.2.4
+  path_provider: ^2.1.1
+  open_filex: ^4.3.4
+  fl_chart: ^0.63.0
+  syncfusion_flutter_charts: ^23.1.36
+  syncfusion_flutter_xlsio: ^23.1.36
+  syncfusion_flutter_core: ^23.1.36
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  build_runner: ^2.4.6
+  mobx_codegen: ^2.3.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
