--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,18 @@
 name: package_reports
 description: Package de criação de relatórios automaticamente a partir de uma entrada de JSON
-version: 0.0.4
-#homepage:
+version: 0.0.1
+#publish_to: none
 repository: https://github.com/jacsontiede85/package_reports
+author: Jacson Tiede
+homepage: https://github.com/jacsontiede85/package_reports
+
+platforms:
+  - android
+  - ios
+  - web
+
+licenses:
+  - "MIT"
 
 environment:
   sdk: '>=3.1.3 <4.0.0'
@@ -40,6 +50,7 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
+  uses-material-design: true
 
   # To add assets to your package, add an assets section, like this:
   # assets:
