--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  package_reports:
+    path: ../
   flutter:
     sdk: flutter
   fluent_ui: ^4.7.5
