--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,71 +17,33 @@ licenses:
 
 environment:
   sdk: '>=3.1.3 <4.0.0'
-  flutter: ">=1.17.0"
 
 dependencies:
-  package_reports:
-    path: ../
   flutter:
     sdk: flutter
-  fluent_ui: ^4.7.5
-  intl: ^0.18.1
-  mobx: ^2.2.0
-  flutter_mobx: ^2.0.6+5
-  get_it: 7.6.4
-  http: ^1.1.0
+  fluent_ui: ^4.8.6
+  intl: ^0.19.0
+  mobx: ^2.3.0+1
+  flutter_mobx: ^2.2.0+2
+  get_it: ^7.6.7
+  http: ^1.2.1
   crypto: ^3.0.3
   loading_animation_widget: ^1.2.0+4
   adaptive_scrollbar: ^2.1.2
   universal_html: ^2.2.4
-  path_provider: ^2.1.1
-  open_filex: ^4.3.4
-  fl_chart: ^0.63.0
-  syncfusion_flutter_charts: ^23.1.36
-  syncfusion_flutter_xlsio: ^23.1.36
-  syncfusion_flutter_core: ^23.1.36
+  path_provider: ^2.1.2
+  open_filex: ^4.4.0
+  fl_chart: ^0.66.2
+  syncfusion_flutter_charts: ^24.2.6
+  syncfusion_flutter_xlsio: ^24.2.6
+  syncfusion_flutter_core: ^24.2.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
-  build_runner: ^2.4.6
-  mobx_codegen: ^2.3.0
+  flutter_lints: ^3.0.1 
+  build_runner: ^2.4.8
+  mobx_codegen: ^2.6.0+1
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
-
-# The following section is specific to Flutter packages.
 flutter:
   uses-material-design: true
-
-  # To add assets to your package, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
-  #
-  # For details regarding assets in packages, see
-  # https://flutter.dev/assets-and-images/#from-packages
-  #
-  # An image asset can refer to one or more resolution-specific "variants", see
-  # https://flutter.dev/assets-and-images/#resolution-aware
-
-  # To add custom fonts to your package, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts in packages, see
-  # https://flutter.dev/custom-fonts/#from-packages
