--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   open_filex: ^4.4.0
   syncfusion_flutter_charts: ^25.1.35
   syncfusion_flutter_xlsio: ^25.1.35
+  responsive_builder: ^0.7.0
 
 dev_dependencies:
   flutter_test:
