--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,26 +21,27 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  intl: ^0.18.1
-  mobx: ^2.3.0+1
-  flutter_mobx: ^2.2.0+2
+    
+  intl: ^0.19.0
+  mobx: ^2.3.3+2
+  flutter_mobx: ^2.2.1+1
   http: ^1.2.1
   crypto: ^3.0.3
   loading_animation_widget: ^1.2.1
   adaptive_scrollbar: ^2.1.2
   universal_html: ^2.2.4
-  path_provider: ^2.1.2
+  path_provider: ^2.1.3
   open_filex: ^4.4.0
-  syncfusion_flutter_charts: ^25.1.35
-  syncfusion_flutter_xlsio: ^25.1.35
+  syncfusion_flutter_charts: ^25.2.4
+  syncfusion_flutter_xlsio: ^25.2.4
   responsive_builder: ^0.7.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.1 
-  build_runner: ^2.4.8
-  mobx_codegen: ^2.6.0+1
+  flutter_lints: ^4.0.0 
+  build_runner: ^2.4.10
+  mobx_codegen: ^2.6.1
 
 flutter:
   uses-material-design: true
