logica salvar filtros shared_preferences

--- a/exemplo/pubspec.yaml
+++ b/exemplo/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   package_reports:
     path: ../
   responsive_builder: ^0.7.0
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
