--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   syncfusion_flutter_charts: ^26.1.40
   syncfusion_flutter_xlsio: ^26.1.40
   responsive_builder: ^0.7.1
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
