--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.3.2
   pdf: ^3.11.1
   printing: ^5.13.2
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
