--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,7 +22,7 @@ dependencies:
   flutter:
     sdk: flutter
     
-  intl: ^0.20.0
+  intl: ^0.19.0
   mobx: ^2.3.3
   flutter_mobx: ^2.2.1+1
   http: ^1.2.1
@@ -32,11 +32,12 @@ dependencies:
   universal_html: ^2.2.4
   path_provider: ^2.1.3
   open_filex: ^4.7.0
-  syncfusion_flutter_charts: ^30.1.39
-  syncfusion_flutter_xlsio: ^30.1.39
+  syncfusion_flutter_charts: ^29.1.39
+  syncfusion_flutter_xlsio: ^29.1.39
   responsive_builder: ^0.7.1
   shared_preferences: ^2.3.2
   pdf: ^3.11.1
+  archive: ^3.6.1
   printing: ^5.13.2
 
 dev_dependencies:
